WebCore/platform/chromium/KeyCodeConversionGtk.cpp
@@ -91,6 +91,7 @@ int windowsKeyCodeForKeyEvent(unsigned keycode)
     case GDK_Control_R:
         return VKEY_CONTROL; // (11) CTRL key
     case GDK_Menu:
+        return VKEY_APPS;  // (5D) Applications key (Natural keyboard)
     case GDK_Alt_L:
     case GDK_Alt_R:
         return VKEY_MENU; // (12) ALT key
@@ -261,7 +262,6 @@ int windowsKeyCodeForKeyEvent(unsigned keycode)
         return VKEY_LWIN; // (5B) Left Windows key (Microsoft Natural keyboard)
     case GDK_Meta_R:
         return VKEY_RWIN; // (5C) Right Windows key (Natural keyboard)
-        // VKEY_APPS (5D) Applications key (Natural keyboard)
         // VKEY_SLEEP (5F) Computer Sleep key
         // VKEY_SEPARATOR (6C) Separator key
         // VKEY_SUBTRACT (6D) Subtract key
